--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,15 +13,18 @@ repository = "https://github.com/omnisstream/omnisstream-core"
 
 [workspace.dependencies]
 anyhow = "1.0.95"
+blake3 = "1.5.5"
 bytes = "1.9.0"
 clap = { version = "4.5.23", features = ["derive"] }
 crc32c = "0.6.8"
+hex = "0.4.3"
 prost = "0.13.4"
 prost-types = "0.13.4"
+semver = "1.0.25"
 serde = { version = "1.0.216", features = ["derive"] }
 serde_json = "1.0.134"
 tempfile = "3.14.0"
 thiserror = "2.0.9"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
-
+uuid = { version = "1.11.0", features = ["v4"] }
