--- a/crates/omnisstream/Cargo.toml
+++ b/crates/omnisstream/Cargo.toml
@@ -7,16 +7,23 @@ repository.workspace = true
 
 [dependencies]
 anyhow.workspace = true
+blake3.workspace = true
 bytes.workspace = true
 crc32c.workspace = true
+hex.workspace = true
 prost.workspace = true
 prost-types.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+semver.workspace = true
 tempfile.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
+uuid.workspace = true
+
+[build-dependencies]
+prost-build = "0.13.5"
+protoc-bin-vendored = "3.1.0"
 
 [dev-dependencies]
 tempfile.workspace = true
-
