--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 members = [
   "crates/omnisstream",
   "crates/omnisstream_cli",
+  "crates/omnisstream_ffi",
+  "crates/omnisstream_bench",
+  "crates/omnisstream_backend_api",
+  "crates/omnisstream_benchdiff",
 ]
 resolver = "2"
 
@@ -18,6 +22,7 @@ bytes = "1.9.0"
 clap = { version = "4.5.23", features = ["derive"] }
 crc32c = "0.6.8"
 hex = "0.4.3"
+libc = "0.2.178"
 prost = "0.13.4"
 prost-types = "0.13.4"
 semver = "1.0.25"
